# dev_notes

./: Cargo.toml  README.md
src/: app.rs  controller.rs  event.rs  file_handler.rs  handler.rs  insert.rs  lib.rs  main.rs  movement.rs  projects.rs  state.rs  tui.rs  widgets.rs
