[package]
name = "dev_notes"
version = "0.1.0"
authors = ["joshua pauline"]
edition = "2021"

[dependencies]
crossterm = "0.21.0"
serde = { version = "1.0.123", features = ["derive"] }
lazy_static = "1.4.0"
directories-next = "2.0.0"
serde_json = "1.0.64"
chrono = "0.4.19"

[dependencies.tui]
version = "0.16.0"
default-features = false
features = ["crossterm"]
